WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201518
AccessibilityRenderObject::setSelectedTextRange fails to set the selection passed an empty line.
https://bugs.webkit.org/show_bug.cgi?id=201518
Summary
AccessibilityRenderObject::setSelectedTextRange fails to set the selection pa...
Andres Gonzalez
Reported
2019-09-05 14:40:29 PDT
AccessibilityRenderObject::setSelectedTextRange fails to set the selection passed an empty line.
Attachments
Patch
(5.80 KB, patch)
2019-09-05 14:57 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2019-09-05 14:57:28 PDT
Created
attachment 378126
[details]
Patch
Andres Gonzalez
Comment 2
2019-09-05 17:14:01 PDT
<
rdar://problem/54835122
> VoiceOver: When navigating text using characters rotor, VO gets stuck at end of first line and does not jump to subsequent lines of text as expected
WebKit Commit Bot
Comment 3
2019-09-06 00:06:15 PDT
Comment on
attachment 378126
[details]
Patch Clearing flags on attachment: 378126 Committed
r249565
: <
https://trac.webkit.org/changeset/249565
>
WebKit Commit Bot
Comment 4
2019-09-06 00:06:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug